--- a/move.html
+++ b/move.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <title>움직이는 공</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <script src="script.js" charset="UTF-8"></script>
+        <script src="script.js" charset="utf-8"></script>
     </head>
     <body>
         <div id="circle"></div>
